--- a/requirements.txt
+++ b/requirements.txt
@@ -3,18 +3,23 @@ affine==2.3.0
 albumentations==0.4.3
 astor==0.8.1
 attrs==19.3.0
-boto3==1.11.5
-botocore==1.14.5
+backcall==0.1.0
+bleach==3.1.0
+boto3==1.11.6
+botocore==1.14.6
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
 click-plugins==1.1.1
 cligj==0.5.0
+colorama==0.4.3
 cycler==0.10.0
 decorator==4.4.1
+defusedxml==0.6.0
 docutils==0.15.2
+entrypoints==0.3
 Fiona==1.8.13
-gast==0.3.2
+gast==0.3.3
 GDAL==3.0.3
 geopandas==0.6.2
 grpcio==1.26.0
@@ -22,30 +27,59 @@ h5py==2.10.0
 idna==2.8
 imageio==2.6.1
 imgaug==0.2.6
+importlib-metadata==1.4.0
+ipykernel==5.1.3
+ipython==7.11.1
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+jedi==0.15.2
+Jinja2==2.10.3
 jmespath==0.9.4
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==5.3.4
+jupyter-console==6.1.0
+jupyter-core==4.6.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 kiwisolver==1.1.0
 Markdown==3.1.1
+MarkupSafe==1.1.1
 matplotlib==3.1.2
 mercantile==1.1.2
+mistune==0.8.4
 mock==3.0.5
+more-itertools==8.1.0
 munch==2.5.0
+nbconvert==5.6.1
+nbformat==5.0.3
 networkx==2.4
+notebook==6.0.2
 numexpr==2.7.1
 numpy==1.18.1
 opencv-python==4.1.2.30
 opencv-python-headless==4.1.2.30
 pandas==0.25.3
-Pillow==7.0.0
+pandocfilters==1.4.2
+parso==0.5.2
+pickleshare==0.7.5
+Pillow==6.1.0
+prometheus-client==0.7.1
+prompt-toolkit==3.0.2
 protobuf==3.11.2
+Pygments==2.5.2
 pyparsing==2.4.6
 pyproj==2.4.2.post1
+pyrsistent==0.15.7
 pystac==0.3.1
 python-dateutil==2.8.1
 pytz==2019.3
 PyWavelets==1.1.1
+pywin32==227
+pywinpty==0.5.7
 PyYAML==5.2
+pyzmq==18.1.1
+qtconsole==4.6.0
 rasterio==1.1.2
 requests==2.22.0
 rio-cogeo==1.1.8
@@ -56,6 +90,7 @@ Rtree==0.9.3
 s3transfer==0.3.1
 scikit-image==0.16.2
 scipy==1.4.1
+Send2Trash==1.5.0
 Shapely==1.6.4.post2
 six==1.14.0
 snuggs==1.4.7
@@ -65,8 +100,16 @@ tensorboard==1.13.1
 tensorflow==1.13.1
 tensorflow-estimator==1.13.0
 termcolor==1.1.0
-torch==1.4.0
-torchvision==0.5.0
+terminado==0.8.3
+testpath==0.4.4
+torch==1.3.1
+torchvision==0.4.2
+tornado==6.0.3
 tqdm==4.41.1
+traitlets==4.3.3
 urllib3==1.25.7
+wcwidth==0.1.8
+webencodings==0.5.1
 Werkzeug==0.16.0
+widgetsnbextension==3.5.1
+zipp==2.0.0
