--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@ raw_source_data/train_tier_2
 raw_source_data/test
 
 #Temp Data
-temp_data/tier1
-temp_data/tier2
-temp_data/sample
-temp_data/test
+temp_data/tier1*
+temp_data/tier2*
+temp_data/sample*
+temp_data/test*
 temp_data/**/*.csv
