--- a/Mask_RCNN_Model/requirements.txt
+++ b/Mask_RCNN_Model/requirements.txt
@@ -4,9 +4,10 @@ Pillow
 cython
 matplotlib
 scikit-image
-tensorflow>=1.3.0
-keras>=2.0.8
+tensorflow==1.14.0
+keras>=2.2.4
 opencv-python
 h5py
 imgaug
 IPython[all]
+
