--- a/requirements.txt
+++ b/requirements.txt
@@ -3,16 +3,17 @@ affine==2.3.0
 albumentations==0.4.3
 astor==0.8.1
 attrs==19.3.0
+awscli==1.17.9
 backcall==0.1.0
 bleach==3.1.0
 boto3==1.11.6
-botocore==1.14.6
+botocore==1.14.9
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
 click-plugins==1.1.1
 cligj==0.5.0
-colorama==0.4.3
+colorama==0.4.1
 cycler==0.10.0
 decorator==4.4.1
 defusedxml==0.6.0
@@ -35,6 +36,7 @@ ipywidgets==7.5.1
 jedi==0.15.2
 Jinja2==2.10.3
 jmespath==0.9.4
+joblib==0.14.1
 jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==5.3.4
@@ -67,6 +69,7 @@ Pillow==6.1.0
 prometheus-client==0.7.1
 prompt-toolkit==3.0.2
 protobuf==3.11.2
+pyasn1==0.4.8
 Pygments==2.5.2
 pyparsing==2.4.6
 pyproj==2.4.2.post1
@@ -86,9 +89,11 @@ rio-cogeo==1.1.8
 rio-mucho==1.0.0
 rio-tiler==1.3.1
 rio-toa==0.3.0
+rsa==3.4.2
 Rtree==0.9.3
 s3transfer==0.3.1
 scikit-image==0.16.2
+scikit-learn==0.22.1
 scipy==1.4.1
 Send2Trash==1.5.0
 Shapely==1.6.4.post2
